@startuml
'https://plantuml.com/class-diagram

interface PersistentMemoryInterface {
    + save(String fileName);
    + load(String fileName);
}

interface NetworkMemoryInterface {
    + read(StateInterface<T> state);
    + learn(List<NstepExperience<T>> miniBatch);
}

 abstract class ValueMemoryNetworkAbstract<T>  {
    MultiLayerPerceptron neuralNetwork;
    MomentumBackpropagation learningRule;
    NormalizerInterface normalizer;
    boolean isWarmedUp;
    NetSettings netSettings;
    + abstract double[] getInputVec(StateInterface<S> state)
}

PersistentMemoryInterface <-- NetworkMemoryInterface
NetworkMemoryInterface <-- ValueMemoryNetworkAbstract

ValueMemoryNetworkAbstract <-- NeuralValueMemoryCharge
ValueMemoryNetworkAbstract <-- NeuralValueMemoryFork
ValueMemoryNetworkAbstract <-- NeuralValueMemoryMaze


@enduml